[gd_scene load_steps=11 format=1]

[ext_resource path="res://mainGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/black_ready.png" type="Texture" id=3]
[ext_resource path="res://assets/red_ready.png" type="Texture" id=4]
[ext_resource path="res://assets/yellow_ready.png" type="Texture" id=5]
[ext_resource path="res://scripts/speedBar.gd" type="Script" id=6]
[ext_resource path="res://fontSize100.fnt" type="BitmapFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0546875, 0.052124, 0.052124, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.82387, 0.80368, 0.894531, 0.976471 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.0078125, 0.0078125, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="mainGame" type="Node2D"]

script/script = ExtResource( 1 )

[node name="spinner1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 280 )

[node name="spinner2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 1000 )
transform/rot = 180.0

[node name="control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 630.0
margin/right = 720.0
margin/bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="player1" type="Control" parent="control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnBlack" type="TextureButton" parent="control/player1"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 630.0
margin/right = 200.0
margin/bottom = 730.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnRed" type="TextureButton" parent="control/player1"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 530.0
margin/right = 200.0
margin/bottom = 630.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnYellow" type="TextureButton" parent="control/player1"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 430.0
margin/right = 200.0
margin/bottom = 530.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="speedBar" type="ProgressBar" parent="control/player1"]

rect/min_size = Vector2( 630, 80 )
rect/rotation = 90.0
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 560.0
margin/right = 1270.0
margin/bottom = 640.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="score" type="Label" parent="control/player1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 660.0
margin/right = 720.0
margin/bottom = 767.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="msg" type="Label" parent="control/player1"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 86.0
margin/top = 753.0
margin/right = 1010.0
margin/bottom = 860.0
custom_fonts/font = ExtResource( 7 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player2" type="Control" parent="control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnBlack" type="TextureButton" parent="control/player2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 650.0
margin/right = 720.0
margin/bottom = 750.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnRed" type="TextureButton" parent="control/player2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 735.0
margin/right = 720.0
margin/bottom = 835.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnYellow" type="TextureButton" parent="control/player2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 835.0
margin/right = 720.0
margin/bottom = 935.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="speedBar" type="ProgressBar" parent="control/player2"]

rect/min_size = Vector2( 630, 80 )
rect/rotation = -90.0
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 720.0
margin/right = 710.0
margin/bottom = 800.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="score" type="Label" parent="control/player2"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 620.0
margin/right = 1440.0
margin/bottom = 727.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="msg" type="Label" parent="control/player2"]

rect/rotation = 180.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 642.0
margin/top = 526.0
margin/right = 1566.0
margin/bottom = 633.0
custom_fonts/font = ExtResource( 7 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="restart" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="block" from="." to="spinner1" method="_on_mainGame_block"]

[connection signal="block" from="." to="spinner2" method="_on_mainGame_block"]

[connection signal="unBlock" from="." to="spinner1" method="_on_mainGame_unBlock"]

[connection signal="unBlock" from="." to="spinner2" method="_on_mainGame_unBlock"]

[connection signal="limit" from="spinner1" to="." method="_on_spinner1_limit"]

[connection signal="speed" from="spinner1" to="control/player1/speedBar" method="_on_spinner_speed"]

[connection signal="zero" from="spinner1" to="." method="_on_spinner1_zero"]

[connection signal="limit" from="spinner2" to="." method="_on_spinner2_limit"]

[connection signal="speed" from="spinner2" to="control/player2/speedBar" method="_on_spinner_speed"]

[connection signal="zero" from="spinner2" to="." method="_on_spinner2_zero"]

[connection signal="pressed" from="control/player1/btnBlack" to="spinner1" method="_on_btnBlack_pressed"]

[connection signal="pressed" from="control/player1/btnRed" to="spinner1" method="_on_btnRed_pressed"]

[connection signal="pressed" from="control/player1/btnYellow" to="spinner1" method="_on_btnYellow_pressed"]

[connection signal="pressed" from="control/player2/btnBlack" to="spinner2" method="_on_btnBlack_pressed"]

[connection signal="pressed" from="control/player2/btnRed" to="spinner2" method="_on_btnRed_pressed"]

[connection signal="pressed" from="control/player2/btnYellow" to="spinner2" method="_on_btnYellow_pressed"]

[connection signal="timeout" from="restart" to="." method="_on_restart_timeout"]


